# Chemical_preprocessing_API

./: Dockerfile  README.md  docker-compose.yml  environment.yml  frontend.py  pyproject.toml
app/: main.py
app/api/endpoints/: getFingerPrint_bySMILES.py
app/models/: schemas.py
app/services/: fingerprint_generation.py
app/services/# app/services/: standardize.py
sample_data/: SMILES.txt
tests/: test_fingerprint_api.py  test_frontend.py
